@@ -5,6 +5,8 @@ data:extend({
     {
         type = "technology",
         name = "foundation-platform-disable",
+        localised_description =
+        "[color=orange][img=warning] Warning: Mass production changes everything. The easy path may not remain forever. Plan accordingly.[/color]",
         icon = "__space-age__/graphics/icons/foundation.png",
         icon_size = 64,
         effects = {
@@ -22,6 +24,5 @@ data:extend({
             item = "foundation",
             count = 10000
         },
-        prerequisites = { "foundation-platform-productivity-30" },
     }
 })
